--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
         color: #007bff;
     }
     a:hover {
-        color: #cb0db2;
+        color: #09f114;
     }
 
     /* Header */
@@ -420,6 +420,8 @@
 
 
 
+
+
     <section class="about" id="aboutme">
         <h2>About Me</h2>
         <div class="about-content">
@@ -435,6 +437,9 @@
 
         </div>
     </section>
+
+
+
 
 
     <section class="photo-gallery">
